static/things.css
* {
  font-size: 1.1rem;
  font-family: monospace;
}

body {
  display: flex;

  flex-direction: column;

  align-items: center;
}

main {
  display: flex;

  flex-direction: column;

  max-width: 70em;
}

@media (min-width: 50em) {
  main {
    width: 50em;
  }
}

footer {
  position: fixed;
  bottom: 0;

  opacity: 0.5;
}

footer > * {
  font-size: 0.8rem;
}

pre {
  white-space: break-spaces;
}

#tell-me {
  width: 90%;

  outline: 0;
  border: 0;
  border-bottom: 1px solid rgba(0, 0, 0, 0);

  font-size: 2rem;
}

#tell-me:focus-visible {
  border-bottom: 1px solid black;
  
}

#waiting {
  width: 1em;
}

@media (prefers-color-scheme: light) {
  #waiting {
    filter: invert(100%);
  }
}

section#answer > ul {
  list-style-type: none;
  padding-left: 0;
}

section.thing {
  position: relative;

  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  padding-bottom: 0.2ex;
  margin-bottom: 1ex;
}

section.thing > p {
  margin-bottom: 0;
}

section.thing .content > p:last-child {
  padding-bottom: 0.2ex;
  margin-bottom: 0;
}

@media (min-width: 50em) {
  .meta {
    position: absolute;
    right: -15em;
    top: 0.2ex;
    width: 15em;

    display: flex;
    flex-direction: column;

    opacity: 0;
  }
}

.meta * {
  color: #999;
  font-size: small;
}

section.thing:hover .meta {
  opacity: 1;
}

section.javascript textarea {
  width: 100%;
}

section.javascript canvas {
  border: 1px solid #ddd;
}

section.javascript .js-error {
  color: red;
}

